--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -38,7 +38,7 @@
     </div>
 
     <script type="module" src="https://cdn.jsdelivr.net/npm/flatpickr" async></script>
-    <!-- <script type="module" src="../node_modules/izitoast/src/js/iziToast.js" async></script> -->
+    <script src="iziToast.min.js" type="text/javascript"></script>
     <script type="module" src="./js/1-timer.js"></script>
   </body>
 </html>
