--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
     <title>Page 3</title>
   </head>
@@ -34,7 +36,7 @@
     </form>
 
 
-    <!-- <script type="module" src="../node_modules/izitoast/src/js/iziToast.js" async></script> -->
+    <script src="iziToast.min.js" type="text/javascript"></script>
     <script type="module" src="./js/2-snackbar.js"></script>
   </body>
 </html>
